--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </div>
         
         <!-- About Us Section -->
-        <section class="about-us-section">
+        <section id="about-us" class="about-us-section">
             <div class="section-container">
                 <h2 class="section-title fade-in-up">About Us</h2>
                 <div class="about-us-content">
@@ -157,7 +157,7 @@
         </div>
         
         <!-- Contact Section -->
-        <section class="contact-section">
+        <section id="contact" class="contact-section">
             <div class="section-container">
                 <h2 class="section-title fade-in-up">Contact Us</h2>
                 <div class="contact-content">
@@ -216,5 +216,6 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <script src="func.js"></script>
+    <script src="smooth-scroll.js"></script>
 </body>
 </html>
